Add PSU Blue-White Game

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
-<body ng-app="app" ng-init="dateState = 'past'">
+<body ng-app="app" ng-init="dateState = 'live'">
 
   <!-- HEADER -->
   <div class="navbar-wrapper">
