--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,12 @@
 
 	<title>mobseen</title>
 
-	<!-- CSS -->
+	<!-- bootstrap, font-awesome, and custom styling -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="libs/weather-icons-master/css/weather-icons.css">
-	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
-
-	<!-- JS -->
-	<script src="libs/jquery/dist/jquery.min.js"></script>
-	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="libs/angular/angular.min.js"></script>
-	<script src="libs/angular-route/angular-route.min.js"></script>
-	<script src="libs/angular-resource/angular-resource.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-  <script src='libs/lodash/dist/lodash.underscore.min.js'></script>
-  <script src='libs/angular-google-maps/dist/angular-google-maps.min.js'></script>
-  <script src='libs/infinite-scroll/ng-infinite-scroll.min.js'></script>
-
-	<!-- ANGULAR CUSTOM -->
-  <script src="js/controllers/MainCtrl.js"></script>
-  <script src="js/controllers/EventCtrl.js"></script>
-  <script src="js/services/SocketFactory.js"></script>
-  <script src="js/services/InstaFactory.js"></script>
-  <script src="js/services/EventsFactory.js"></script>
-	<script src="js/appRoutes.js"></script>
-	<script src="js/app.js"></script>
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body ng-app="app" ng-init="dateState = 'live'">
+<body ng-app="app" ng-init="dateState = 'past'">
 
   <!-- HEADER -->
   <div class="navbar-wrapper">
@@ -68,6 +46,27 @@
 
 	<!-- ANGULAR DYNAMIC CONTENT -->
 	<div ng-view></div>
+
+  <!-- JS -->
+  <script src="libs/jquery/dist/jquery.min.js"></script>
+  <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="libs/angular/angular.min.js"></script>
+  <script src="libs/angular-route/angular-route.min.js"></script>
+  <script src="libs/angular-resource/angular-resource.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+  <script src='libs/lodash/dist/lodash.underscore.min.js'></script>
+  <script src='libs/angular-google-maps/dist/angular-google-maps.min.js'></script>
+  <script src='libs/infinite-scroll/ng-infinite-scroll.min.js'></script>
+
+  <!-- ANGULAR CUSTOM -->
+  <script src="js/controllers/MainCtrl.js"></script>
+  <script src="js/controllers/EventCtrl.js"></script>
+  <script src="js/services/SocketFactory.js"></script>
+  <script src="js/services/InstaFactory.js"></script>
+  <script src="js/services/EventsFactory.js"></script>
+  <script src="js/appRoutes.js"></script>
+  <script src="js/app.js"></script>
 
   <script>
     function imgError(image){
