Turn custom jquery back on

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
   <script src="js/appRoutes.js"></script>
   <script src="js/app.js"></script>
 
-  <!-- <script>
+  <script>
     function imgError(image){
       image.parentNode.parentNode.style.display = 'none';
     }
@@ -73,6 +73,6 @@
     function anonImg(image){
       image.src = 'https://instagramimages-a.akamaihd.net/profiles/anonymousUser.jpg';
     }
-  </script> -->
+  </script>
 </body>
 </html>
