Improve style and structure of module, config, controllers, services

--- a/public/index.html
+++ b/public/index.html
@@ -58,12 +58,12 @@
   <script src='libs/infinite-scroll/ng-infinite-scroll.min.js'></script>
 
   <!-- ANGULAR CUSTOM -->
-  <script src="js/controllers/MainCtrl.js"></script>
-  <script src="js/controllers/EventCtrl.js"></script>
-  <script src="js/services/SocketFactory.js"></script>
-  <script src="js/services/EventsFactory.js"></script>
-  <script src="js/appRoutes.js"></script>
-  <script src="js/app.js"></script>
+  <script src="app/main/main.controller.js"></script>
+  <script src="app/event/event.controller.js"></script>
+  <script src="app/services/socket.service.js"></script>
+  <script src="app/services/event.service.js"></script>
+  <script src="app/app.config.js"></script>
+  <script src="app/app.module.js"></script>
 
   <script>
     function imgError(image){
