--- a/public/index.html
+++ b/public/index.html
@@ -64,15 +64,16 @@
   <script src="app/services/event.service.js"></script>
   <script src="app/main/main.controller.js"></script>
   <script src="app/event/event.controller.js"></script>
+  <script src="app/event/defaultImage.directive.js"></script>
 
   <script>
     function imgError(image){
       image.parentNode.parentNode.style.display = 'none';
     }
 
-    function anonImg(image){
+    /* function anonImg(image){
       image.src = 'https://instagramimages-a.akamaihd.net/profiles/anonymousUser.jpg';
-    }
+    } */
   </script>
 </body>
 </html>
