Add hide-image directive

--- a/public/index.html
+++ b/public/index.html
@@ -65,13 +65,14 @@
   <script src="app/main/main.controller.js"></script>
   <script src="app/event/event.controller.js"></script>
   <script src="app/event/defaultImage.directive.js"></script>
+  <script src="app/event/hideImage.directive.js"></script>
 
   <script>
-    function imgError(image){
+    /* function imgError(image){
       image.parentNode.parentNode.style.display = 'none';
     }
 
-    /* function anonImg(image){
+    function anonImg(image){
       image.src = 'https://instagramimages-a.akamaihd.net/profiles/anonymousUser.jpg';
     } */
   </script>
