Remove infinite-scroll directive, add getAllEvents method

--- a/public/app/event/event.html
+++ b/public/app/event/event.html
@@ -1,4 +1,4 @@
-<div class="row inner" infinite-scroll="event.loadImages()" infinite-scroll-distance="1" infinite-scroll-disabled="event.busy">
+<div class="row inner">
 	<h2 class="headline">{{event.event}}</h2>
   	<h3 class="headline" ng-show="headline">{{event.headline}}</h3>
 	<h3 class="headline">{{event.city}}, {{event.state}}</h3>
